2005-03-25  Gilles Chanteperdrix <gilles.chanteperdrix@laposte.net>

	* Fixed support for cross-compilation.

2005-03-03  Herbert Xu <herbert@gondor.apana.org.au>

	* Removed qflag.
	* Removed redundant setstackmark from dotcmd.
	* Do not clobber exit status in dotcmd.

2005-03-02  Herbert Xu <herbert@gondor.apana.org.au>

	* Renamed symbols to avoid conflict with libc.
	* Optimisations in bltin/test.c.

2005-02-28  Herbert Xu <herbert@gondor.apana.org.au>

	* Replaced EXEVAL with SKIPEVAL.
	* Update funcnest atomically.
	* Only set skipcount for break and continue.
	* Removed expcmd built-in.
	* Normalise input in likely/unlikely macros.

2005-02-28  A Costa <agcosta@gis.net>

	* Corrected that/than typo in manual page.

2005-02-25  A Costa <agcosta@gis.net>

	* Corrected grammar in manual page.

2005-02-25  Herbert Xu <herbert@gondor.apana.org.au>

	* Changed boolean rootshell into shlvl counter.
	* Catch set -e exits within built-in commands.
	* Size optimisations with setjmp in main().
	* Only reread exitstatus on EXEXIT in exitshell.
	* Eliminated global exerrno.

2005-01-31  Gerrit Pape <pape@smarden.org>

	* Release 0.5.2.
	* Corrected manual entry about ENV and non-interactive shells.

2004-11-24  Gerrit Pape <pape@smarden.org>

	* Spell behaviour consistently in manual page.

2004-11-23  A Costa <agcosta@gis.net>

	* Fixed spelling errors in manual page.

2004-08-21  Herbert Xu <herbert@gondor.apana.org.au>

	* Size optimisations around varvalue() in src/expand.c.
	* Fixed signed char promotion in src/expand.c.

2004-08-18  Herbert Xu <herbert@gondor.apana.org.au>

	* Fixed $@ expansion when leading argument is null in src/expand.c.

2004-08-07  Herbert Xu <herbert@gondor.apana.org.au>

	* Allow negative pid argument to kill(1) in src/jobs.c.

2004-08-04  Herbert Xu <herbert@gondor.apana.org.au>

	* Fixed cd - when OLDPWD is unset in src/cd.c.

2004-07-09  Herbert Xu <herbert@gondor.apana.org.au>

	* Include system.h (Gerrit Pape):
	  . src/mystring.c